--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /myTest.class
+/Abstraction.class
+/Circle.class
+/Rectangle.class
+/Shape.class
+/in1.class
+/myTestClass.class
+/ImyTestClass.class
